# trading-agents

./: .env.example  .gitignore  ARCHITECTURE.md  DESIGN.md  LLM-trading_agent.md  README.md  pyproject.toml
cli/: backtest_cmd.py  cards_cmd.py  cgan_cmd.py  main.py  pinn_cmd.py  serve_cmd.py
docker/: .dockerignore  Dockerfile  docker-compose.yml
market_cgan/data/: bar.py  features.py  lobster.py  polygon.py
market_cgan/models/: bar_discriminator.py  bar_generator.py  discriminator.py  generator.py
market_cgan/simulation/: bar_exchange.py  bar_world_agent.py  exchange.py  world_agent.py
market_cgan/training/: bar_physics_loss.py  losses.py  physics_loss.py  trainer.py
market_pinn/models/: pinn.py
market_pinn/physics/: black_scholes.py
market_pinn/synthesis/: generator.py
market_pinn/training/: dataset.py  losses.py  trainer.py
scripts/: compare_risk_rewards.py  gen_cli_screenshot.py  run_bar_backtest.py  run_compare_risk.py  train_spus_q1_2026.py
tests/test_backtest/: test_engine.py  test_metrics.py  test_parallel.py
tests/test_cards/: test_deck.py  test_nodes.py  test_registry.py
tests/test_cgan/: test_bar.py  test_bar_discriminator.py  test_bar_exchange.py  test_bar_generator.py  test_bar_physics_loss.py  test_bar_world_agent.py  test_cli.py  test_discriminator.py  test_exchange.py  test_features.py  test_generator.py  test_integration.py  test_lob_source.py  test_lobster.py  test_losses.py  test_physics_loss.py  test_polygon.py  test_trainer.py  test_world_agent.py
tests/test_core/: test_cache.py  test_graph.py  (+4 more)
web/: main.py  tasks.py
(+93 files in other folders)
