[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-agent"
version = "0.1.0"
description = "LLM-powered trading agent with backtesting, PINN market synthesis, and web dashboard"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "langchain-community>=0.3",
    "langchain-litellm>=0.3",
    "litellm>=1.50",
    "pydantic>=2",
    "pydantic-settings>=2",
    "pyyaml>=6",
    "numpy>=1.26",
    "pandas>=2",
    "python-dotenv>=1",
    "typer>=0.12",
]
[project.optional-dependencies]
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.18",
    "sqlalchemy>=2",
    "aiosqlite>=0.20",
]
pinn = [
    "torch>=2.4",
]
polygon = [
    "polygon>=1.2",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
]

[project.scripts]
trading-agent = "cli.main:app"

[tool.setuptools.packages.find]
include = ["trading_agent*", "web*", "market_pinn*", "market_cgan*", "cli*"]

